<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>adafruit_matrix_driver</name>
  <version>0.0.0</version>
  <description>A ROS2 driver for the Adafruit 32x32 RGB LED Matrix.</description>
  <author email="aidenbakergabb@gmail.com">Aiden Baker-Gabb</author>
  <maintainer email="aidenbakergabb@gmail.org">Aiden Baker-Gabb</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
